--- a/style/main.css
+++ b/style/main.css
@@ -67,6 +67,7 @@ header nav a:hover{
     .titulo{
         margin-left: 20px;
         margin-right: 20px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
 
     .descricao{
@@ -79,7 +80,7 @@ header nav a:hover{
         margin: 20px 0 0 55px;
         width:350px;
         display:flex;
-        justify-content:space-evenly;    
+        justify-content:space-evenly;   
     }
 
     .botao-1{
@@ -123,6 +124,15 @@ header nav a:hover{
 
     
         }
-    
 
+    
+    .box-filme{
+        margin-top: 10px;
+        margin-bottom: 15px;
+        height: 350px;
+        width: 350px;
+        display:block;
+        cursor:pointer;
+        box-shadow: 0 0 0.2em white;
+    }
     
