--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ header nav a:hover{
     .filme-principal{
         width: 100%;
         height: 100vh;
-        background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0,0,0,.50)100%), url(../img/capa.jpg);
+        background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0,0,0,.50)100%), url(../NETFLIX/assets/capa.jpg);
         background-size: cover;
         margin: -60px 0 0 0px;
         z-index: 1;        
@@ -127,10 +127,9 @@ header nav a:hover{
 
     
     .box-filme{
-        margin-top: 10px;
-        margin-bottom: 15px;
-        height: 350px;
-        width: 350px;
+        margin: 10px 0 10px 10px;
+        height: 100%;
+        width: 100%;
         display:block;
         cursor:pointer;
         box-shadow: 0 0 0.2em white;
