--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ header nav a:hover{
     .filme-principal{
         width: 100%;
         height: 100vh;
-        background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0,0,0,.50)100%), url(../NETFLIX/assets/capa.jpg);
+        background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0,0,0,.50)100%), url(assets/capa.jpg);
         background-size: cover;
         margin: -60px 0 0 0px;
         z-index: 1;        
@@ -72,12 +72,12 @@ header nav a:hover{
 
     .descricao{
         margin: 10px 20px 0 20px;
-        padding-right: 600px;
-       
+        padding-right: 30px;
+        width:400px;
     }
     
     .div-botao{
-        margin: 20px 0 0 55px;
+        margin: 50px 0 0 50px;
         width:350px;
         display:flex;
         justify-content:space-evenly;   
@@ -85,17 +85,19 @@ header nav a:hover{
 
     .botao-1{
         font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;
-        background: #fff;
-        border-radius: 5px;
-        padding: 10px 20px; 
-        border: 1px solid #fff;
+        background: rgba(78, 77, 77, 0.3);
+        color:white;
+        border-radius: 1px;
+        padding: 15px 20px; 
+        border: 1px solid rgba(78, 77, 77, 0.3);
         transition: 0.45s;
         
 
     }
   
     .botao-1:hover{
-        background:#d1caca;
+        background:#fff;
+        color:#141414;
         border: 1px solid #fff;
         transition: 0,45s;
         cursor: pointer;
@@ -107,17 +109,19 @@ header nav a:hover{
 
        
         font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;
-        background: #fff;
-        border-radius: 5px;
+        background: rgba(78, 77, 77, 0.3);
+        color:white;
+        border-radius: 1px;
         padding: 10px 20px; 
-        border: 1px solid #fff;
+        border: 1px solid rgba(78, 77, 77, 0.3);
         transition: 0.45s;
         
       }
 
 
       .botao-2:hover{
-        background:#d1caca;
+        background:#fff;
+        color:#141414;
         border: 1px solid #fff;
         transition: 0,45s;
         cursor: pointer;
@@ -133,5 +137,7 @@ header nav a:hover{
         display:block;
         cursor:pointer;
         box-shadow: 0 0 0.2em white;
+        
     }
     
+  
